--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.2",
     "lucide-react": "^0.294.0",
     "framer-motion": "^10.16.16",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "react-helmet-async": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
