--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,11 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/imservices
 NODE_ENV=development
+
+# MongoDB Atlas Connection (replace with your connection string)
+MONGODB_URI=mongodb+srv://imservices:Kd4leH1iPRPSj7fZ@imservices.gitkl0u.mongodb.net/imservices?retryWrites=true&w=majority
+
+# JWT Secret for Authentication (generate a strong secret for production)
+JWT_SECRET=f1472a8882a8de2d80ab43f97670a10620acd3e1
 
 # Email Configuration (for nodemailer)
 EMAIL_HOST=smtp.gmail.com
