--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,28 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["injection-moulding", "maintenance", "industrial"],
+  "keywords": [
+    "injection-moulding",
+    "maintenance",
+    "industrial"
+  ],
   "author": "IM Services",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "express-validator": "^7.0.1"
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
