--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
+# Backend API Configuration
+VITE_API_URL=http://localhost:5000/api
+
 # EmailJS Configuration
 # Get these values from https://www.emailjs.com/
 VITE_EMAILJS_SERVICE_ID=your_service_id_here
