--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.6.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.16",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "pdfjs-dist": "^5.4.394",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-intersection-observer": "^9.5.3",
     "react-pdf": "^10.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
