--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,14 @@
-# Backend API Configuration
-VITE_API_URL=http://localhost:5000/api
-
 # EmailJS Configuration
 # Get these values from https://www.emailjs.com/
-VITE_EMAILJS_SERVICE_ID=your_service_id_here
-VITE_EMAILJS_TEMPLATE_ID_CONTACT=your_contact_template_id_here
-VITE_EMAILJS_TEMPLATE_ID_BOOKING=your_booking_template_id_here
-VITE_EMAILJS_PUBLIC_KEY=your_public_key_here
+
+# Your EmailJS Service ID (from Email Services page)
+VITE_EMAILJS_SERVICE_ID=service_s2vp4yo
+
+# Your EmailJS Template ID for Contact Form (from Email Templates page)
+VITE_EMAILJS_TEMPLATE_ID_CONTACT=template_hr7w61x
+
+# Your EmailJS Template ID for Booking Form (from Email Templates page)
+VITE_EMAILJS_TEMPLATE_ID_BOOKING=template_lxdxso4
+
+# Your EmailJS Public Key (from Account > General page)
+VITE_EMAILJS_PUBLIC_KEY=pwWQdSKmXVgyRQGzz
