Make all signup fields required with validation

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,3 +12,8 @@ VITE_EMAILJS_TEMPLATE_ID_BOOKING=template_lxdxso4
 
 # Your EmailJS Public Key (from Account > General page)
 VITE_EMAILJS_PUBLIC_KEY=pwWQdSKmXVgyRQGzz
+
+# Backend API URL
+# For local development: http://localhost:5000/api
+# For production: your Render backend URL (e.g., https://im-services-backend.onrender.com/api)
+VITE_API_URL=http://localhost:5000/api
